[package]
name = "alephbunny_token"
edition = "2021"
version = "0.9.6"
authors = ["Aleph Bunnies <alephbunniesapp@gmail.com>"]
overflow-checks = false

[dependencies]

scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
ink = { version = "~4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag="3.0.0", default-features= false, features = ["psp22"] }

[lib]
name = "alephbunny_token"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "openbrush/std",
    "scale/std"
]
psp22 = ["openbrush/psp22"]
ink-as-dependency = []
